# freshdesk_mcp

./: README.md  pyproject.toml  smithery.yaml
src/freshdesk_mcp/: server.py
