[project]
name = "freshdesk-mcp"
version = "1.2.0"
description = "An MCP server for Freshdesk"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "build>=1.2.2.post1",
    "httpx==0.28.1",
    "mcp[cli]>=1.6.0",
    "pydantic>=2.10.6",
]

[[project.authors]]
name = "Gopi Krishnan"
email = "gopi@effy.co.in"

[[project.authors]]
name = "Maanaesh Swamy"
email = "maanaesh.s@effy.co.in"

[build-system]
requires = [ "hatchling", "setuptools", "wheel"]
build-backend = "hatchling.build"

[project.scripts]
freshdesk-mcp = "freshdesk_mcp.server:main"
